<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/color_white"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        style="@style/TextView.Screen.Title"
        android:gravity="center"
        android:minHeight="@dimen/actionbar_height"
        android:text="@string/setting_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/connect_text_size_30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_grey" />

    <TextView
        style="@style/TextView.Screen.Title"
        android:gravity="left|center"
        android:minHeight="@dimen/actionbar_height"
        android:onClick="setupScheduleArea"
        android:paddingLeft="@dimen/connect_margin_16"
        android:text="@string/setting_schedule" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_grey" />

    <TextView
        style="@style/TextView.Screen.Title"
        android:gravity="left|center"
        android:minHeight="@dimen/actionbar_height"
        android:onClick="reviewScheduleArea"
        android:paddingLeft="@dimen/connect_margin_16"
        android:text="@string/setting_review_schedule" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_grey" />

    <TextView
        style="@style/TextView.Screen.Title"
        android:gravity="left|center"
        android:minHeight="@dimen/actionbar_height"
        android:onClick="setupVanUsedArea"
        android:paddingLeft="@dimen/connect_margin_16"
        android:text="@string/setting_van_used" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_grey" />

    <TextView
        style="@style/TextView.Screen.Title"
        android:gravity="left|center"
        android:minHeight="@dimen/actionbar_height"
        android:onClick="scheduleStopArea"
        android:paddingLeft="@dimen/connect_margin_16"
        android:text="@string/setting_schedule_in_day" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_grey" />

    <TextView
        style="@style/TextView.Screen.Title"
        android:gravity="left|center"
        android:minHeight="@dimen/actionbar_height"
        android:onClick="editInfoArea"
        android:paddingLeft="@dimen/connect_margin_16"
        android:text="@string/setting_edit_info_area" />
</LinearLayout>