<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.motor.connect.feature.setting.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:layout_gravity="top"
            android:gravity="center|left"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_action_left"
                android:layout_width="36dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:onClick="gotoPreviousScreen"
                app:srcCompat="@mipmap/ic_back_white" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/TextView.Screen.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                android:text="@string/setting_title" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_white" />

        <!-- Action Bar End -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_area_setting"
                style="@style/TextView.Screen.Description"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_rect_bg"
                android:drawableRight="@mipmap/ic_next_grey"
                android:gravity="center|left"
                android:minHeight="46dp"
                android:onClick="openSettingScheduler"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/setting_schedule" />


            <TextView
                android:id="@+id/txt_config"
                style="@style/TextView.Screen.Description"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_rect_bg"
                android:drawableRight="@mipmap/ic_next_grey"
                android:gravity="center|left"
                android:minHeight="46dp"
                android:onClick="openConfigScreen"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/setting_system" />

            <TextView
                android:id="@+id/txt_note"
                style="@style/TextView.Screen.Description"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_rect_bg"
                android:drawableRight="@mipmap/ic_next_grey"
                android:gravity="center|left"
                android:minHeight="46dp"
                android:onClick="openNotedScreen"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/setting_note" />

            <TextView
                android:id="@+id/txt_how_use"
                style="@style/TextView.Screen.Description"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_rect_bg"
                android:drawableRight="@mipmap/ic_next_grey"
                android:gravity="center|left"
                android:minHeight="46dp"
                android:onClick="openHowToUseScreen"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/setting_how_use" />

            <TextView
                android:id="@+id/txt_help"
                style="@style/TextView.Screen.Description"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_rect_bg"
                android:drawableRight="@mipmap/ic_next_grey"
                android:gravity="center|left"
                android:minHeight="46dp"
                android:onClick="openHelpFeedbackScreen"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/setting_help_feedback" />

        </LinearLayout>
    </LinearLayout>
</layout>