<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.motor.connect.feature.details.AreaDetailViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="28dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_blue"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/backdrop_5"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="24dp">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_info_area"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:id="@+id/txt_area_name"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Ten khu vuc" />

                        <TextView
                            android:id="@+id/txt_area_phone"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Sdt: 0906383956" />

                        <TextView
                            android:id="@+id/txt_area_van"
                            style="@style/TextView.Screen.Detail"
                            tool:text="So van" />

                        <TextView
                            android:id="@+id/txt_area_scheduler"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Lich tuoi" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/working_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:minHeight="160dp"
                    android:visibility="gone">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right">

                        <include

                            layout="@layout/progressing_view" />
                    </FrameLayout>

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Đang hoạt động"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:id="@+id/txt_time_start"
                            style="@style/TextView.Screen.Detail"
                            android:textSize="@dimen/connect_text_size_description"
                            tool:text="Thoi gian bat dau" />

                        <TextView
                            android:id="@+id/txt_time_working"
                            style="@style/TextView.Screen.Detail"
                            android:textSize="@dimen/connect_text_size_description"
                            tool:text="Thoi gian tuoi" />

                        <TextView
                            android:id="@+id/txt_van"
                            style="@style/TextView.Screen.Detail"
                            android:textSize="@dimen/connect_text_size_description"
                            tool:text="So van mo" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin"
                    android:visibility="visible">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_info_motor"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:id="@+id/txt_area_status"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Trang thai" />

                        <TextView
                            android:id="@+id/txt_area_van_used"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Van dang mo (van 01,02 ..)" />

                        <TextView
                            android:id="@+id/txt_schedule_working"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Lich dang tuoi" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_note"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:id="@+id/txt_area_detail"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Khu vuc 01, buoi da xanh 2 nam tuoi" />

                        <TextView
                            android:id="@+id/txt_area_history"
                            style="@style/TextView.Screen.Detail"
                            tool:text="Ngay 20 tuoi buoi sang luc 7h 30ph, buoi chieu luc 16h 30ph ..." />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_action_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:onClick="selectSettingView"
            android:scaleType="center"
            android:src="@mipmap/ic_setting"
            app:fabCustomSize="46dp"
            app:layout_anchor="@id/backdrop"
            app:layout_anchorGravity="bottom|right|end"
            app:maxImageSize="36dp" />
    </android.support.design.widget.CoordinatorLayout>
</layout>